Fixed that stupid wrapping bullshit on the home page with the footer.

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@
   min-height: 100vh;
 }
 
+.AppContainer {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+}
+
 
 .Content {
   flex: 1;
@@ -39,7 +45,7 @@ body {
 footer {
   background-color: #282c34; 
   color: #fff; 
-  padding: 20px 0; 
+  padding: 20px; 
   text-align: center; 
   position: absolute;
   bottom: 0;
